# Stock-Sentiment-Prediction

./: .env.example  .gitignore  FinBERT.ipynb  FinGPT.ipynb  LICENSE  README.md  alpaca_api.py  collector.py  daily_yfinance_data.py  environment.yml  futures_collector.py  news_collector.py  news_event_notebook.ipynb  news_topic_collector.py  notebook.ipynb  process_sql.py  pyproject.toml  yfinance_data.py
DeepSeek-R1-8B/: DeepSeek-R1.ipynb
archive/: README.md
archive/project_history/: dissertation_project_conversation_summary.md
data/inspect_data/: inspect_mag7_fundamentals.ipynb  (+3 more)
data_pipeline/: backfill_news_windows.py  build_clean_news_tables.py  collect_news_by_ticker.py  collect_news_by_topic.py
docs/: FINAL_RESULTS.md  FINAL_STUDY_PROTOCOL.md  progress-2026-07-01.md
inspect_data/: inspect_fred_macro_data.ipynb  inspect_mag7_prices.ipynb
notebooks/: DeepSeek_LTN_Market_Regime_Experiment.ipynb  mag7_5shot_relevance_sample_audit.ipynb  mag7_bull_bear_ltn_alternative_time_split.ipynb  mag7_bull_bear_ltn_pipeline_inspection.ipynb  mag7_full_classifier_final_clean.ipynb  mag7_full_classify_final_final.ipynb  mag7_selective_final_clean.ipynb  news_event_notebook_deepseek.ipynb  news_event_notebook_gemini.ipynb  news_event_notebook_github_models_comparison.ipynb  news_event_notebook_grok.ipynb  news_relevance_nshot_price_trend_analysis.ipynb  oil_full_classifier_final_clean.ipynb  oil_selective_final_clean.ipynb
scripts/: run_mag7_relevance_filter.py
tests/: test_final_dataset_integrity.py  test_information_cutoff.py
tools/: review_candidate_ltn_rules.py
(+65 files in other folders)
