[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-sentiment-prediction"
version = "0.1.0"
description = "Neuro-symbolic stock-news event extraction and market-regime reasoning pipeline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kieran Cooke" }]
keywords = [
  "nlp",
  "sentiment-analysis",
  "stock-market",
  "postgresql",
  "time-series",
  "transformers",
  "data-pipeline",
]
dependencies = [
  "huggingface-hub>=0.23",
  "numpy>=1.26",
  "pandas>=2.1",
  "psycopg2-binary>=2.9",
  "pyarrow>=15",
  "python-dotenv>=1.0",
  "requests>=2.31",
  "sqlalchemy>=2.0",
]

[project.optional-dependencies]
notebooks = [
  "google-genai>=1.0",
  "ipykernel>=6.29",
  "jupyter>=1.0",
  "matplotlib>=3.8",
  "torch>=2.2",
  "transformers>=4.41",
]

[tool.setuptools]
py-modules = []
